--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
     "mongoose": "^9.1.5",
+    "motion": "^12.29.2",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "react": "19.2.3",
