--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.563.0",
     "mongoose": "^9.1.5",
     "motion": "^12.29.2",
     "next": "16.1.6",
